# autolala

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  docker-compose.yaml  draw_d1_miss_curves.py  draw_d1_miss_curves_simple.py  plan.md  plot.py  transform_polybench.py  tt.txt  update_polybench.py
analysis-server/: Cargo.toml
analysis-server/src/: analysis.rs  main.rs
analysis-webpage/: Cargo.toml  Trunk.toml  index.html
analysis-webpage/src/: main.rs
analyzer/: Cargo.toml
analyzer/misc/: affine_if_test.mlir  const_bicg.mlir  const_cholesky.mlir  const_convolution.mlir  const_doitgen.mlir  const_gramschmidt.mlir  const_heat_dist.mlir  const_lu_decomp.mlir  const_matmul_3acc.mlir  const_matmul_4acc.mlir  const_matmul_once_tiled.mlir  const_matmul_twice_tiled.mlir  convolution.mlir  imperfect.mlir  lu_decomp.mlir  run-analyzer.py  select-miss-count.py  sym_matmul.mlir  sym_matmul_3acc.mlir  sym_matmul_4acc.mlir  sym_matmul_repeat.mlir  tiled_matmul.mlir  tiled_matmul_2.mlir  tiled_matmul_once_tiled.mlir  tiled_matmul_twice_tiled.mlir
analyzer/misc/benchmark/: graph.py  matmul-t1.c  matmul-t2.c  matmul.c  parallel_runner.py
analyzer/misc/benchmark/iscc/: matmul-c.txt  matmul.txt  matmul2-c.txt  matmul2.txt  matmul3-c.txt  matmul3.txt
analyzer/misc/einsum/: batch_matmul.c  bilinear_transformation_pattern.c  hadamard_product_2d.c  hadamard_product_4d.c  mahalanobis_distance_pattern.c  marginalization_pattern.c  matrix_chain_5.c  matrix_diagonal.c  matrix_trace.c  maxcut_quantum_circuit_pattern.c  tensor_network_2x3_pattern.c  tensor_regression_network_pattern.c  triplestore_query_pattern.c  tucker_decomposition_pattern.c  vector_outer_product.c  weighted_model_counting_pattern.c
analyzer/misc/einsum/constant/: batch_matmul.c  bilinear_transformation_pattern.c  hadamard_product_2d.c  hadamard_product_4d.c  mahalanobis_distance_pattern.c  marginalization_pattern.c  matrix_chain_5.c  matrix_diagonal.c  matrix_trace.c  maxcut_quantum_circuit_pattern.c  port_to_global.py  tensor_network_2x3_pattern.c  tensor_regression_network_pattern.c  triplestore_query_pattern.c  tucker_decomposition_pattern.c  vector_outer_product.c  weighted_model_counting_pattern.c
analyzer/misc/einsum/constant_global/: PADDING_INFO.md  README.md  batch_matmul.c  bilinear_transformation_pattern.c  hadamard_product_2d.c  hadamard_product_4d.c  mahalanobis_distance_pattern.c  marginalization_pattern.c  matrix_chain_5.c  matrix_diagonal.c  matrix_trace.c  maxcut_quantum_circuit_pattern.c  tensor_network_2x3_pattern.c  tensor_regression_network_pattern.c  triplestore_query_pattern.c  tucker_decomposition_pattern.c  vector_outer_product.c  weighted_model_counting_pattern.c
analyzer/misc/einsum/symbolic/: batch_matmul.c  bilinear_transformation_pattern.c  hadamard_product_2d.c  hadamard_product_4d.c  mahalanobis_distance_pattern.c  marginalization_pattern.c  matrix_chain_5.c  matrix_diagonal.c  matrix_trace.c  maxcut_quantum_circuit_pattern.c  tensor_network_2x3_pattern.c  tensor_regression_network_pattern.c  triplestore_query_pattern.c  tucker_decomposition_pattern.c  vector_outer_product.c  weighted_model_counting_pattern.c
analyzer/misc/polybench/: .gitignore
analyzer/misc/polybench/const/: benchmark.csv  benchmark.json  benchmark.md  const_3mm.mlir  const_adi.mlir  const_atax.mlir  const_bicg.mlir  const_cholesky.mlir  const_convolution.mlir  const_correlation.mlir  const_covariance.mlir  const_doitgen.mlir  const_fdtd-apml.mlir  const_floyd_warshall.mlir  const_gemm.mlir  const_gemver.mlir  const_gesummv.mlir  const_gramschmidt.mlir  const_lu.mlir  const_mvt.mlir  const_seidel-2d.mlir  const_symm.mlir  const_syr2k.mlir  const_syrk.mlir  const_trisolve.mlir  const_trmm.mlir  draw.py  extract-running-time.bash  extract.py  process_auto_json.sh  reference-counting-deeply-immutable-data-structures-with-cycles-an-intellectual-abstract.bib  run-sim.sh  run.sh  run_all.sh
analyzer/misc/polybench/polygeist/constant/: 2mm.c  3mm.c  adi.c  atax.c  bicg.c  cholesky.c  correlation.c  covariance.c  deriche.c  doitgen.c  durbin.c  fdtd-2d.c  gemm.c  gemver.c  gesummv.c  gramschmidt.c  heat-3d.c  jacobi-1d.c  jacobi-2d.c  lu.c  ludcmp.c  matmul.c  mvt.c  nussinov.c  pad_dimensions.py  seidel-2d.c  symm.c  syr2k.c  syrk.c  trisolv.c  trmm.c
analyzer/misc/polybench/polygeist/symbolic/: 2mm.c  3mm.c  adi.c  atax.c  bicg.c  cholesky.c  correlation.c  covariance.c  deriche.c  doitgen.c  durbin.c  fdtd-2d.c  gemm.c  gemver.c  gesummv.c  gramschmidt.c  heat-3d.c  jacobi-1d.c  jacobi-2d.c  lu.c  ludcmp.c  matmul.c  mvt.c  nussinov.c  seidel-2d.c  symm.c  syr2k.c  syrk.c  trisolv.c  trmm.c
analyzer/misc/polybench/symbolic/: command.txt  draw.py  extract.py  run.sh  sym_2mm.mlir  sym_3mm.mlir  sym_adi.mlir  sym_atax.mlir  sym_bicg.mlir  sym_cholesky.mlir  sym_convolution.mlir  sym_correlation.mlir  sym_covariance.mlir  sym_deriche.mlir  sym_doitgen.mlir  sym_durbin.mlir  sym_fdtd.mlir  sym_floyd_warshall.mlir  sym_gemm.mlir  sym_gemver.mlir  sym_gesummv.mlir  sym_gramschmidt.mlir  sym_heat-3d.mlir  sym_imperfect.mlir  sym_jacobi-1d.mlir  sym_jacobi-2d.mlir  sym_lu.mlir  sym_lu_decomp.mlir  sym_mvt.mlir  sym_seidel-2d.mlir  sym_symm.mlir  sym_syr2k.mlir  sym_syrk.mlir  sym_trisolve.mlir  sym_trmm.mlir
analyzer/src/: denning.rs  isl.rs  main.rs  salt.rs  utils.rs
assoc-conv/: Cargo.toml
barvinok-sys/: Cargo.toml  build.rs
cachegrind-runner/: Cargo.toml
cachegrind-runner/src/: main.rs
crates/dmd-cli/: Cargo.toml
crates/dmd-cli/src/: main.rs
crates/dmd-core/: Cargo.toml  build.rs
crates/dmd-core/src/: ast.rs  error.rs  formula.rs  grammar.lalrpop  lexer.rs  lib.rs  parser.rs  polyhedral.rs  semantics.rs
crates/dmd-playground/: Cargo.toml
crates/dmd-playground/assets/: app.js  index.html  styles.css
crates/dmd-playground/src/: main.rs
denning/: Cargo.toml
denning/src/: lib.rs
raffine/: CMakeLists.txt  Cargo.toml  build.rs
raffine/src/: CMakeLists.txt  affine.rs  cxx.rs  extractor.cpp  lib.rs  tree.rs
raffine/src/cxx/: affine_helper.cpp  affine_helper.hpp
(+142 files in other folders)
