[package]
name = "analysis-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive", "env"] }
hakoniwa = { version = "1.1.6", features = ["landlock"] }
ntex = { version = "2.12.4", features = ["compio", "compress"] }
serde = { version = "1.0.219", features = ["derive"] }
tempfile = "3.20.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
