[package]
name = "analysis-webpage"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
gloo-net = "0.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
talc = "4.4.2"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = [
    "HtmlSelectElement",
    "HtmlInputElement",
    "HtmlSpanElement",
] }
denning = { path = "../denning" }
yew = { version = "0.21", features = ["csr"] }
plotters = "0.3.7"
plotters-canvas = "0.3.1"
regex = "1.11.1"
