[package]
name = "analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
raffine = { path = "../raffine" }
barvinok = { git = "https://github.com/Roc-Locality/barvinok-rs" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = { version = "0.1", features = ["std", "log"] }
clap = { version = "4.5.37", features = ["derive"] }
melior = { version = "0.24.0" }
anyhow = { version = "1.0.98", features = ["backtrace"] }
symbolica = "0.16.0"
comfy-table = "7.1.4"
