[package]
name = "analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
raffine = { path = "../raffine" }
denning = { path = "../denning", features = ["plotters"] }
barvinok = { git = "https://github.com/Roc-Locality/barvinok-rs" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = { version = "0.1", default-features = false, features = [
    "std",
    "log",
    "max_level_trace",
    "release_max_level_info",
] }
clap = { version = "4.5.37", features = ["derive"] }
melior = { version = "0.24.0" }
anyhow = { version = "1.0.98", features = ["backtrace"] }
symbolica = { version = "0.16.0", default-features = false }
comfy-table = "7.1.4"
ahash = "0.8.12"
gmp-mpfr-sys = { version = "1.6.5", features = ["use-system-libs"] }
serde = { version = "1.0.219", features = ["derive"] }
tikv-jemallocator = { version = "0.6.0", features = [
    "disable_initial_exec_tls",
] }
serde_json = "1.0.140"
plotters = "0.3.7"
