[package]
name = "raffine"
version = "0.1.0"
edition = "2024"

[dependencies]
bumpalo = { version = "3.17.0", features = ["boxed", "collections"] }
melior = { version = "0.24.0", features = ["helpers", "ods-dialects"] }
mlir-sys = "0.5.0"
thiserror = "2.0.12"
tracing = { version = "0.1.41", features = ["log"] }

[dev-dependencies]
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
