[package]
name = "raffine"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
bumpalo = { version = "3.17.0", features = ["boxed", "collections"] }
cxx = { version = "1.0.157", features = ["c++20"] }
melior = { version = "0.24.0", features = ["helpers"] }
mlir-sys = "0.5.0"
thiserror = "2.0.12"
tracing = { version = "0.1.41", features = ["log"] }

[dev-dependencies]
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[build-dependencies]
cxx-build = { version = "1.0.157", features = ["parallel"] }
